--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,9 @@ plugins {
 android {
     namespace 'com.example.batterymanager'
     compileSdk 33
-
+    buildFeatures{
+        viewBinding true
+    }
     defaultConfig {
         applicationId "com.example.batterymanager"
         minSdk 30
