--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
+        tools:ignore = "ProtectedPermissions"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +18,12 @@
         android:theme="@style/Theme.BatteryManager"
         tools:targetApi="31">
         <activity
-            android:name=".SplashActivity"
+            android:name=".activity.UsageBatteryActivity"
+            android:exported="true" >
+
+        </activity>
+        <activity
+            android:name=".activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +32,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="true"/>
-
+            android:name=".activity.MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
